Fix touch move on mobile chrome

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,13 @@ body, html {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #345069;
+  overscroll-behaviour: contain;
+}
+html {
+  overflow: hidden;
+}
+body {
+  overflow: auto;
 }
 canvas {
   width: 100%;
@@ -66,6 +73,7 @@ h2 {
 #touch {
   z-index: 2;
   display: none;
+  overscroll-behaviour: contain;
 }
 #end-screen {
   z-index: 3;
